<resources>
    <string name="app_name">MoneySaver</string>
    <string name="tv_money_desc">tus finanzas en la palma de tu mano</string>
    <string name="tv_money_title">MONEYSAVER</string>
    <string name="tv_login">Iniciar sesión</string>
    <string name="et_login">Ingrese su correo</string>
    <string name="et_password">Ingrese su contraseña</string>
    <string name="bt_login">Iniciar sesión</string>
    <string name="tv_resetpass">Olvidé mi contraseña</string>
    <string name="tv_register">¿Primera vez? Registrate aquí</string>
    <string name="tv_registro">Registro</string>
    <string name="et_nombre_registro">Ingrese su nombre</string>
    <string name="bt_registro">Registrar cuenta</string>
    <string name="tv_register_new">Ya tengo cuenta. Iniciar sesión</string>
    <string name="item_logout">Cerrar sesión</string>
    <string name="bt_vista_principal">Vista principal</string>
    <string name="bt_agregar_gasto">Agregar gasto</string>
    <string name="bt_categorias">Categorias</string>
    <string name="bt_datos">Datos</string>
    <string name="bt_perfil">Perfil</string>
    <string name="tv_saldo_disponible">Saldo disponible </string>
    <string name="tv_max_diario">Máximo recomendado a gastar hoy </string>
    <string name="tv_nuevo_gasto">Añadir gasto</string>
    <string name="bt_nuevo_gasto">Añadir</string>
    <string name="tv_categorias">Seleccione la categoria</string>
    <string name="bt_agregar_ingreso">Agregar ingreso</string>
    <string name="tv_ingreso">Nuevo ingreso</string>
    <string name="tv_categoria">Nueva categoria</string>
    <string name="tv_nombre_fragment">Ingrese su nuevo nombre</string>
    <string name="tv_datos_gastos">Gastos</string>
    <string name="tv_datos_ingreso">Ingresos</string>
    <string name="tv_nuevo_correo">Actualizar correo</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="tv_nuevo_nombre">Actualizar nombre</string>
    <string name="tv_nueva_pass">Actualizar contraseña</string>
    <string name="bt_eliminar_cuenta">Eliminar cuenta</string>
    <string name="tv_borrar_cuenta">¿Deseas eliminar tu cuenta?</string>
    <string name="bt_borrar_cuenta">Eliminar cuenta</string>
    <string name="tv_reset_pass_correo">Ingrese su correo</string>
    <string name="bt_reset_pass_correo">Reestablecer contraseña</string>
    <string name="tv_descripcion">A su correo se enviarán instrucciones para reestablecer su contraseña de manera segura.</string>
    <string name="tv_gasto">Gastos totales</string>
    <string name="tv_ingreso_texto">Ingresos totales</string>
    <string name="tv_lista_cat">Gastos por categoria</string>
    <string name="item_about">Acerca de</string>
</resources>