<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/tv_reset_pass_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_reset_pass_correo"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_margin="20dp"
        android:id="@+id/et_reset_pass_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_pass_correo"/>

    <Button
        android:id="@+id/bt_reset_pass_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/bt_reset_pass_correo"
        app:layout_constraintTop_toBottomOf="@id/et_reset_pass_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/bt_reset_pass_correo"
        android:text="@string/tv_descripcion"/>

</androidx.constraintlayout.widget.ConstraintLayout>